発売日の表示をタップすると、その日が現在に対して何日前なのかを表示するようにした。

--- a/AppleHardwareInfo/en.lproj/Localizable.strings
+++ b/AppleHardwareInfo/en.lproj/Localizable.strings
@@ -71,7 +71,9 @@
 
 "重量" = "Weight";
 "バッテリー容量" = "Battery Capacity";
+"約 %@ %@" = "about %@ %@";
 "発売日" = "Release Date";
+"%@ 前" = "%@ ago";
 "その他" = "Others";
 
 "技術仕様 (support.apple.com)" = "Technical Specifications (support.apple.com)";
